# apsim-python

./: .gitignore  Readme.md  pyproject.toml
apsim/: __init__.py  apsim.py  optimizer.py
